k8s/deployments/feed-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed
  labels:
    app: feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
  template:
    metadata:
      labels:
        app: feed
    spec:
      imagePullSecrets:
        - name: registry-key
      containers:
      - name: feed
        image: gellert5225/sc-feed:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: feed-service
spec:
  selector:
    app: feed
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
