k8s/deployments/file-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file
  labels:
    app: file
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file
  template:
    metadata:
      labels:
        app: file
    spec:
      imagePullSecrets:
        - name: registry-key
      containers:
      - name: file
        image: gellert5225/sc-file:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: file-service
spec:
  selector:
    app: file
  ports:
  - protocol: TCP
    port: 3003
    targetPort: 3003
