k8s/deployments/job-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job
  labels:
    app: job
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job
  template:
    metadata:
      labels:
        app: job
    spec:
      imagePullSecrets:
        - name: registry-key
      containers:
      - name: job
        image: gellert5225/sc-job:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
spec:
  selector:
    app: job
  ports:
  - protocol: TCP
    port: 3004
    targetPort: 3004
